<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.batch.CreateOrJoinFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/branch_create_head"
        style="@style/TextAppearance.albus.Headline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/crate_batch_head"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/centerNameText"
        style="@style/TextAppearance.albus.Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/element_spacing"
        android:layout_marginTop="@dimen/element_spacing"
        android:layout_marginEnd="@dimen/element_spacing"
        android:text="@string/dummy_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/branch_create_head" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/joinBtn"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/double_margin"
        android:text="@string/joing_batch_text"
        app:backgroundTint="@color/btn_bg_color"
        app:icon="@drawable/ic_baseline_add_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/centerNameText" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/or_text"
        style="@style/TextAppearance.albus.BodySecondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/element_spacing"
        android:text="@string/or_text"
        app:layout_constraintEnd_toEndOf="@+id/joinBtn"
        app:layout_constraintStart_toStartOf="@+id/joinBtn"
        app:layout_constraintTop_toBottomOf="@+id/joinBtn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createBtn"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/element_spacing"
        android:text="@string/cre_batch_text"
        app:backgroundTint="@color/btn_bg_color"
        app:icon="@drawable/ic_baseline_add_24"
        app:layout_constraintEnd_toEndOf="@+id/joinBtn"
        app:layout_constraintStart_toStartOf="@+id/joinBtn"
        app:layout_constraintTop_toBottomOf="@+id/or_text" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>