<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.ScheduleFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/element_spacing"
        android:layout_marginEnd="@dimen/element_spacing"
        app:cardCornerRadius="@dimen/element_spacing"
        android:layout_marginTop="@dimen/line_spacing"
        app:cardElevation="@dimen/element_spacing"
        android:layout_marginBottom="@dimen/element_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/subjectTitle"
                style="@style/TextAppearance.albus.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/element_spacing"
                android:layout_marginTop="@dimen/element_spacing"
                android:text=""
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints"
                tools:text="@string/dummy_heading_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/subjectDate"
                style="@style/TextAppearance.albus.BodySecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/element_spacing"
                android:textColor="@color/btn_bg_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subjectTitle"
                tools:ignore="MissingConstraints"
                tools:text="@string/dummy_date_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/subjectPlaceOrMember"
                style="@style/TextAppearance.albus.BodySecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/element_spacing"
                android:layout_marginBottom="@dimen/element_spacing"
                android:text="@string/dummy_place_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subjectDate"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>