<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="viewmodel"
                type="com.project.albus.ui.MainViewModel"/>
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.schedule.ScheduleFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />
    <Button
        android:id="@+id/goBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_save"
        android:backgroundTint="@color/btn_bg_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputCode" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        style="@style/TextAppearance.albus.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/element_spacing"
        android:text="@string/enter_invite_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputCode"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_code_hint_text"
        android:layout_marginEnd="@dimen/element_spacing"
        android:layout_marginStart="@dimen/element_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputInvite_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:text="@{viewmodel.inviteCode}"
            android:inputType="textAutoCorrect|textCapSentences|textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/batchCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/double_margin"
        android:layout_marginEnd="@dimen/double_margin"
        app:layout_constraintEnd_toEndOf="@+id/inputCode"
        app:cardElevation="@dimen/element_spacing"
        android:visibility="gone"
        tools:visibility="invisible"
        app:cardBackgroundColor="@color/textColorCard"
        app:layout_constraintStart_toStartOf="@+id/inputCode"
        app:layout_constraintTop_toBottomOf="@id/goBtn">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/SubjectName"
            style="@style/TextAppearance.albus.Headline6"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/element_spacing"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/element_spacing"
            tools:text="BSO4:Mathematical Induction"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/createBy"
                style="@style/TextAppearance.albus.BodySecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/element_spacing"
                android:text="Created By:"
                android:layout_marginTop="@dimen/element_spacing"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ownerName"
                style="@style/TextAppearance.albus.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/double_margin"
                tools:text="Sha "
                android:layout_marginTop="@dimen/line_spacing"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline" />
            <Button
                android:id="@+id/joinBatchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/joing_batch_text"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/element_spacing"
                android:backgroundTint="@color/btn_bg_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputCode" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>